# AI_study_bibecoding_project1

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/ai/: gateway.py
backend/app/ai/providers/: base.py  ollama_provider.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: health.py  jobs.py  projects.py  shorts.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/render/: shorts_renderer.py
backend/app/schemas/: common.py  job.py  project.py  shorts.py
backend/sana_factory_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: 00_Document_Index.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
scripts/: dev-backend.sh
